--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
